gcc/testsuite/g++.dg/modules/mod-decl-2_b.C

module bob;

import bob; // { dg-error "already declared" }

// module linkage
void Baz ()
{
  Foo ();
  Bar ();
}
